foodopia-kube/templates/foodopia-charts/fooodpia_db_svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: foodopia-db-svc
  namespace: foodopia
  labels:
    app: foodopia-db-svc
spec:
  type: ClusterIP
  selector:
    app: foodopia-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
