foodopia-kube/templates/foodopia-charts/foodopia_Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodopia-ingress
  namespace: foodopia
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:381492127977:certificate/691ab551-e264-4325-83a8-da960fe67c5c"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  rules:
  - host: foodopia.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elb-svc
            port:
              number: 80
  - host: www.foodopia.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elb-svc
            port:
              number: 80
